# ufc-lakehouse

./: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: pipeline.yml
configs/: logging.yaml  settings.yaml  sources.yaml
jobs/: run_events.py  run_fighters.py  run_fights.py
notebooks/: 00_setup.py  01_run_events.py  02_run_fights.py  03_run_fighters.py  10_ingest_landing.ipynb  10_ingest_landing.py  11_build_silver.py  12_build_gold.py  Untitled Notebook 2026-02-06 12_55_14.py
scripts/: run_all.sh  run_bronze.sh  run_gold.sh  run_raw.sh
src/ufc/: checkpoint.py  common.py  config.py  dbfs.py  delta_sink.py  http_client.py
src/ufc/parsers/: event_parser.py  events_parser.py  fight_parser.py  fighter_parser.py
src/ufc/pipelines/: events_pipeline.py  fighters_pipeline.py  fights_pipeline.py
src/ufc_pipeline/common/: config.py  dates.py  http_client.py  ids.py  io.py  parsing.py
src/ufc_pipeline/domain/events/: extractor.py  parser.py  schemas.py
src/ufc_pipeline/monitoring/: logger.py  metrics.py
src/ufc_pipeline/orchestration/: cli.py  runner.py
src/ufc_pipeline/pipelines/: __init__.py  bronze_events.py  bronze_fighters.py  bronze_fights.py  gold_marts.py  raw_event_html.py  raw_events_index.py  raw_fighter_html.py  silver_curate.py
src/ufc_pipeline/quality/: checks.py  expectations.yaml  report.py
tests/integration/: test_end_to_end_small_run.py
tests/unit/: test_ids.py  test_parsers_events.py  test_parsers_fighters.py  test_parsers_fights.py
tools/: extract_landing.py
(+6 files in other folders)
